# workbench

./: .clang-format  .gitignore  README.md
aarch64_reg_card/: index.html
aarch64_tte_decode/: decode.py
ableton_midi_rack_gen/: .gitignore  ezdrummer3.csv  generate.py  p5.csv
adhoc_signed_macho/: Makefile  program.c
airmedia/: .gitignore  probe.py
aoc_2022/: build.zig
aoc_2023/: .gitignore  Makefile  day_01p1.cpp
aoc_2024/: day_01.zig  day_02.zig  input_02.txt
aoc_2025/: MakeDay.sh  Package.swift
arduino_scale/: Makefile  README.txt  arduino_scale.ino
basic_printf/: .gitignore  Makefile  printf.cpp
bitfield_visualizer/: arm_tte_example.py  bitviz.py  visualizer.py
bn_analyze_kc/: analyze.py
bn_core_stub/: .gitignore  fetch_latest_header.sh  generate_stub.py  sanitize_header.py
bn_graphviz_export/: graphviz.py
bn_stm32_loader/: loader.py
bn_tnt_tools/: __init__.py
c_bitfields_tutorial/: main.c
cda3101_cache_simulator/: .gitignore  Makefile  README.txt  go.mod
checkm8_rop_gen/: make_rop.py  reference.s
cis4930_kv_store/: Makefile  main.cpp
clang_format_playground/: sample.cpp  start.sh
clang_format_presets/: freeze.sh
cocoa_login_demo/: .gitignore  LIDAppController.h  LIDAppController.m  LIDMain.m  LIDMainViewController.h  LIDMainViewController.m  Makefile
constexpr_hash/: .gitignore  Makefile  main.cpp
darwin_runtime_patching/: .gitignore  Makefile  library.c  (+2 more)
qt_resource_demo/: CMakeLists.txt  main.cpp  resources.qrc
qt_resource_demo/assets/: ricotta.txt
wstp_example/: CMakeLists.txt  README.txt  engine.h  main.c
(+145 files in other folders)
